src/objects/sma__MAArcGISBatchPushTest__c.object
<CustomObject>
    <fields>
        <fullName>sma__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MapAnything ArcGIS Batch Push Test</label>
    <nameField>
        <label>MapAnything ArcGIS Batch Push Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything ArcGIS Batch Push Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>